# crypto_helpers

./: .gitignore  CMakeLists.txt  Readme.md  glean.json
glean/: CMakeLists.txt
include/: aes.h  sha256.h
src/: sha256_file.cpp  sha256sum.cpp
tests/: .speed_test_sha256.cpp.swp  aes_test.cpp  constexpr.cpp  sha256_test.cpp  speed_test.cpp  speed_test_aes.cpp  speed_test_sha256.cpp
